--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
